[package]
name = "iwlib"
version = "0.1.0"
authors = ["Sibi Prabakaran <sibi@psibi.in>"]
edition = "2018"
readme = "README.md"
description = "Safe bindings to libiw library"
repository = "https://github.com/psibi/iwlib-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.88"
iwlib_sys = { path = "iwlib_sys", version = "0.1" }

[lib]
name = "iwlib"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.53.1"
