[package]
name = "iwlib"
version = "0.1.1"
authors = ["Sibi Prabakaran <sibi@psibi.in>"]
edition = "2018"
readme = "README.md"
description = "Safe bindings to libiw library"
repository = "https://github.com/psibi/iwlib-rs"
keywords = ["Wireless", "Linux"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.147"
iwlib_sys = { path = "iwlib_sys", version = "0.1" }

[lib]
name = "iwlib"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.66.1"
