[package]
name = "iwlib_sys"
version = "0.1.0"
authors = ["Sibi Prabakaran <sibi@psibi.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "iwlib_sys"
path = "lib.rs"

[build-dependencies]
bindgen = "0.53.1"
